--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,4 +1,5 @@
 <div class="row">
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
@@ -11,6 +12,7 @@
       <li><a href="{{site.swc_pages}}/shell-novice/reference">Reference...</a></li>
     </ul>
   </div>
+  -->
   <div class="col-md-6">
     <h3 id="syllabus-python">Programming in Python</h3>
     <ul>
@@ -67,6 +69,7 @@
       <li><a href="{{site.swc_pages}}/git-novice/reference">Reference...</a></li>
     </ul>
   </div>
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
@@ -81,7 +84,6 @@
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
   </div>
-    <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
     <ul>
@@ -91,5 +93,6 @@
       <li>Advanced Functions</li>
       <li><a href="{{site.lc_pages}}library-openrefine/reference">Reference...</a></li>
     </ul>
-  </div>-->
+  </div>
+  -->
 </div>
