--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -3,11 +3,13 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/shell-novice/">Automating tasks with the Unix shell</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>10:45</td>  <td><a href="https://swcarpentry.github.io/shell-novice/">Continuing Unix shell lesson</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="https://swcarpentry.github.io/python-novice-gapminder/">Building Programs with Python</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>14:45</td>  <td><a href="https://swcarpentry.github.io/python-novice-gapminder/">Continuing Python Lessons</a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
@@ -15,11 +17,13 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/python-novice-gapminder/">Python continued - Lists and Loops</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>10:45</td>  <td><a href="https://swcarpentry.github.io/python-novice-gapminder/">Python Wrap-up</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="https://rrlove.github.io/git-novice-topdown/">Version Control with Git</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>14:45</td>  <td> <a href="https://rrlove.github.io/git-novice-topdown/"> Git Continued </a> </td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
